instructions.Instructions.scala.error
Erreur de compilation :
Instructions:1: error: not found: value baisserBrosse
baisserBrosse()
^Instructions:9: error: not found: value leverBrosse
leverBrosse() 
^